[BUG] Correct the pom for shuffle-manager-2 for include com.aliyun.emr:client

--- a/client-spark/shuffle-manager-2/pom.xml
+++ b/client-spark/shuffle-manager-2/pom.xml
@@ -124,7 +124,7 @@
                                     <!-- Include here the dependencies you
                                         want to be packed in your fat jar -->
                                     <include>com.aliyun.emr:common</include>
-                                    <include>com.aliyun.emr:client-java</include>
+                                    <include>com.aliyun.emr:client</include>
                                     <include>com.aliyun.emr:shuffle-manager-common</include>
                                     <include>com.aliyun.emr:shuffle-manager</include>
                                 </includes>
