--- a/server-common/pom.xml
+++ b/server-common/pom.xml
@@ -28,7 +28,7 @@
 
   <artifactId>server-common</artifactId>
   <packaging>jar</packaging>
-  <name>Aliyun E-MapReduce Shuffle Service Common</name>
+  <name>Aliyun E-MapReduce Shuffle Service Server Common</name>
 
   <dependencies>
     <dependency>
