fix workflows error

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,13 +20,13 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn install -DskipTests -Pspark-2
+      run: mvn install -DskipTests -Pspark-2 -Plog4j-1
     - name: Check Java Code Style
       run: mvn checkstyle:check -Pspark-2
     - name: Check Scale Code Style
       run: mvn scalastyle:check -Pspark-2
     - name: Unit Test
-      run: mvn test -Pspark-2
+      run: mvn test -Pspark-2 -Plog4j-1
   build_rss_on_spark_3:
     runs-on: ubuntu-latest
     steps:
@@ -37,12 +37,12 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn install -DskipTests -Pspark-3
+      run: mvn install -DskipTests -Pspark-3 -Plog4j-1
     - name: Check Java Code Style
       run: mvn checkstyle:check -Pspark-3
     - name: Check Scale Code Style
       run: mvn scalastyle:check -Pspark-3
     - name: Unit Test
-      run: mvn test -Pspark-3
+      run: mvn test -Pspark-3 -Plog4j-1
     needs: build_rss_on_spark_2
 
