Refactor the configuration

--- a/conf/rss-defaults.conf.template
+++ b/conf/rss-defaults.conf.template
@@ -9,18 +9,18 @@ rss.push.io.threads                              8
 
 rss.worker.flush.queue.capacity                  4096
 rss.push.data.replicate                          true
-rss.metrics.system.enable                        true
+rss.metrics.system.enabled                       true
 rss.worker.prometheus.metric.port                9096
 rss.master.prometheus.metric.port                9098
 rss.worker.base.dirs                             /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4,/mnt/disk5,/mnt/disk6,/mnt/disk7,/mnt/disk8,/mnt/disk9,/mnt/disk10
 
 rss.master.port                                  9097
-rss.ha.enable                                    true
+rss.ha.enabled                                    true
 rss.ha.master.hosts                              localhost
 rss.ha.service.id                             rss
 rss.ha.nodes.rss                              node1
 rss.ha.address.rss.node1                      localhost
 rss.ha.port                                   9872
 rss.ha.storage.dir                               /mnt/disk1/rss_ratis/
-rss.ha.ratis.snapshot.autoTrigger.enable            true
+rss.ha.ratis.snapshot.auto.trigger.enabled            true
 rss.ha.ratis.snapshot.auto.trigger.threshold        200000
