1.change fetchchunktime to send chunk time. 2.add openstreamtime 3.change metrics.properties

--- a/conf/metrics.properties.template
+++ b/conf/metrics.properties.template
@@ -1,1 +1,1 @@
-*.sink.prometheusServlet.class=com.aliyun.emr.rss.server.common.metrics.sink.PrometheusServlet
+*.sink.prometheusServlet.class=com.aliyun.emr.rss.common.metrics.sink.PrometheusServlet
