--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,13 +15,19 @@ jobs:
     strategy:
       matrix:
         maven: [ '3.6.3' ]
+    name: Maven ${{ matrix.maven }} sample
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
+#    - name: Set up JDK 8
+#      uses: actions/setup-java@v2
+#      with:
+#        java-version: '8'
+#        distribution: 'adopt'
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.3.1
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: 8
+        maven-version: ${{ matrix.maven }}
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-2 -Plog4j-1
     - name: Check Java Code Style
@@ -35,13 +41,19 @@ jobs:
     strategy:
       matrix:
         maven: [ '3.6.3' ]
+    name: Maven ${{ matrix.maven }} sample
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
+#    - name: Set up JDK 8
+#      uses: actions/setup-java@v2
+#      with:
+#        java-version: '8'
+#        distribution: 'adopt'
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.3.1
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: 8
+        maven-version: ${{ matrix.maven }}
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-3 -Plog4j-1
     - name: Check Java Code Style
