--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,22 +12,13 @@ on:
 jobs:
   build_rss_on_spark_2:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        maven: [ '3.6.3' ]
-    name: Maven ${{ matrix.maven }} sample
     steps:
     - uses: actions/checkout@v2
-#    - name: Set up JDK 8
-#      uses: actions/setup-java@v2
-#      with:
-#        java-version: '8'
-#        distribution: 'adopt'
     - name: Setup Maven Action
       uses: s4u/setup-maven-action@v1.3.1
       with:
         java-version: 8
-        maven-version: ${{ matrix.maven }}
+        maven-version: 3.6.3
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-2 -Plog4j-1
     - name: Check Java Code Style
@@ -38,22 +29,13 @@ jobs:
       run: mvn test -Pspark-2 -Plog4j-1
   build_rss_on_spark_3:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        maven: [ '3.6.3' ]
-    name: Maven ${{ matrix.maven }} sample
     steps:
     - uses: actions/checkout@v2
-#    - name: Set up JDK 8
-#      uses: actions/setup-java@v2
-#      with:
-#        java-version: '8'
-#        distribution: 'adopt'
     - name: Setup Maven Action
       uses: s4u/setup-maven-action@v1.3.1
       with:
         java-version: 8
-        maven-version: ${{ matrix.maven }}
+        maven-version: 3.6.3
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-3 -Plog4j-1
     - name: Check Java Code Style
