--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.3.1
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: 8
+        maven-version: 3.6.3
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-2 -Plog4j-1
     - name: Check Java Code Style
@@ -31,11 +31,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.3.1
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: 8
+        maven-version: 3.6.3
     - name: Build with Maven
       run: mvn install -DskipTests -Pspark-3 -Plog4j-1
     - name: Check Java Code Style
