--- a/pom.xml
+++ b/pom.xml
@@ -481,7 +481,7 @@
         <rss.shuffle.manager>shuffle-manager-2</rss.shuffle.manager>
       </properties>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
@@ -550,7 +550,7 @@
         <log4j2.version>2.17.1</log4j2.version>
       </properties>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
