--- a/server-worker/pom.xml
+++ b/server-worker/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>remote-shuffle-service</artifactId>
         <groupId>com.aliyun.emr</groupId>
-        <version>1.0.0</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
