--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>com.aliyun</groupId>
   <artifactId>remote-shuffle-service</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Aliyun Shuffle Service Project Parent POM</name>
@@ -49,6 +49,17 @@
     <!-- Allow modules to enable / disable certain build plugins easily. -->
     <build.testJarPhase>prepare-package</build.testJarPhase>
     <scalamock.version>5.1.0</scalamock.version>
+    <junit.version>4.12</junit.version>
+    <scalatest.version>3.2.3</scalatest.version>
+    <netty-all.version>4.1.77.Final</netty-all.version>
+    <commons-lang3.version>3.10</commons-lang3.version>
+    <leveldbjni-all.version>1.8</leveldbjni-all.version>
+    <jsr305.version>1.3.9</jsr305.version>
+    <commons-crypto.version>1.0.0</commons-crypto.version>
+    <mockito-core.version>3.6.0</mockito-core.version>
+    <lz4-java.version>1.8.0</lz4-java.version>
+    <commonts-io.version>2.8.0</commonts-io.version>
+    <mockito-scala-scalatest.version>1.16.37</mockito-scala-scalatest.version>
   </properties>
 
   <modules>
@@ -92,6 +103,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.lz4</groupId>
+        <artifactId>lz4-java</artifactId>
+        <version>${lz4-java.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
@@ -121,13 +137,13 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
-        <version>4.12</version>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.binary.version}</artifactId>
         <scope>test</scope>
-        <version>3.2.3</version>
+        <version>${scalatest.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.scala-lang</groupId>
@@ -139,7 +155,7 @@
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-funsuite_${scala.binary.version}</artifactId>
         <scope>test</scope>
-        <version>3.2.3</version>
+        <version>${scalatest.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.scala-lang</groupId>
@@ -155,30 +171,35 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
-        <version>4.1.77.Final</version>
+        <version>${netty-all.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.10</version>
+        <version>${commons-lang3.version}</version>
         <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commonts-io.version}</version>
       </dependency>
       <dependency>
         <groupId>org.fusesource.leveldbjni</groupId>
         <artifactId>leveldbjni-all</artifactId>
-        <version>1.8</version>
+        <version>${leveldbjni-all.version}</version>
         <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
-        <version>1.3.9</version>
+        <version>${jsr305.version}</version>
         <scope>compile</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-crypto</artifactId>
-        <version>1.0.0</version>
+        <version>${commons-crypto.version}</version>
         <scope>compile</scope>
         <exclusions>
           <exclusion>
@@ -190,8 +211,13 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>1.10.19</version>
+        <version>${mockito-core.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-scala-scalatest_${scala.binary.version}</artifactId>
+        <version>${mockito-scala-scalatest.version}</version>
       </dependency>
       <dependency>
         <groupId>io.dropwizard.metrics</groupId>
