--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <netty-all.version>4.1.77.Final</netty-all.version>
     <commons-lang3.version>3.10</commons-lang3.version>
     <commons-io.version>2.8.0</commons-io.version>
+    <jsr305.version>1.3.9</jsr305.version>
   </properties>
 
   <modules>
@@ -125,6 +126,11 @@
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>${jsr305.version}</version>
       </dependency>
 
       <dependency>
