--- a/client/pom.xml
+++ b/client/pom.xml
@@ -43,6 +43,10 @@
             <version>1.8.0</version>
         </dependency>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
