1.correct all style issues 2.rename slots to active writer 3.merge main code

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,13 @@ indent.caseSite = 0
 optIn.configStyleArguments = false
 docstrings.style = keep
 align.preset=none
+
+rewrite.rules = [Imports]
+rewrite.imports.sort = scalastyle
+rewrite.imports.groups = [
+    ["java,scala,3rdParty,emr"],
+    ["javax?\\..*"],
+    ["scala\\..*"],
+    ["(?!com\\.aliyun\\.emr\\.).*"],
+    ["com\\.aliyun\\.emr\\..*"]
+]
