--- a/client-spark/shuffle-manager-3/pom.xml
+++ b/client-spark/shuffle-manager-3/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
         <dependency>
             <groupId>com.aliyun.emr</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.emr</groupId>
             <artifactId>client</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
