--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,12 @@
         <scope>compile</scope>
       </dependency>
       <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.8.0</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
         <groupId>org.fusesource.leveldbjni</groupId>
         <artifactId>leveldbjni-all</artifactId>
         <version>1.8</version>
