Revert "Bump Ratis 2.3.0 and related toolchains (#299)"
This reverts commit d01ee81ee681e11fa9f601519feb7abb4c239d5d.

--- a/server-master/pom.xml
+++ b/server-master/pom.xml
@@ -158,7 +158,7 @@
                             </protocArtifact>
                             <pluginId>grpc-java</pluginId>
                             <pluginArtifact>
-                                io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                                io.grpc:protoc-gen-grpc-java:1.29.0:exe:${os.detected.classifier}
                             </pluginArtifact>
                         </configuration>
                     </execution>
