--- a/client-spark/shuffle-manager-3/pom.xml
+++ b/client-spark/shuffle-manager-3/pom.xml
@@ -121,6 +121,10 @@
                                     <pattern>io.netty</pattern>
                                     <shadedPattern>com.aliyun.emr.io.netty</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>org.apache.hadoop</pattern>
+                                    <shadedPattern>com.aliyun.emr.org.apache.hadoop</shadedPattern>
+                                </relocation>
                             </relocations>
                             <artifactSet>
                                 <includes>
@@ -133,6 +137,7 @@
                                     <include>com.google.protobuf:protobuf-java</include>
                                     <include>com.google.guava:guava</include>
                                     <include>io.netty:*</include>
+                                    <include>org.apache.hadoop:*</include>
                                 </includes>
                             </artifactSet>
                             <filters>
